# excel-live-mcp

./: .gitignore  README.md  pyproject.toml  requirements.txt  server.json
excel_mcp/: __init__.py  client.py  server.py
tests/: test_client.py
